--- a/frontend/src/app/layout/dashboard/dashboard.component.scss
+++ b/frontend/src/app/layout/dashboard/dashboard.component.scss
@@ -2,34 +2,44 @@
     font-size: 22px;
     text-align: center;
 }
-.flex{
+
+.flex {
     display: flex;
 }
-.justify-content{
+
+.justify-content {
     justify-content: space-between;
 }
 
-.summary-box{
+.summary-box {
     border: 1px solid black;
     padding: 20px 50px;
     border-radius: 5px;
     width: 8%;
 }
-.primary{
+
+.primary {
     color: #3f51b5;
 }
-.font-size-14{
+
+.font-size-14 {
     font-size: 17px;
     padding-top: 8px;
     font-weight: bold;
 }
+
 .btn {
     font-size: 13px;
     height: 33px;
 }
-.company-box{
+
+.company-box {
     border: 1px solid black;
     padding: 20px 70px;
     border-radius: 5px;
     width: 14%;
+}
+
+.customer-chart-width {
+    width: 50%;
 }
