--- a/frontend/src/app/layout/analysis/analysis.component.html
+++ b/frontend/src/app/layout/analysis/analysis.component.html
@@ -229,10 +229,10 @@
     <div class="header-content">
         <h1 class="center">Profit Chart</h1>
         <div class="center total-count">
-             <span>Total Sale:<b> {{totalSaleInProfitChartWise}}</b>, </span>
-            <span>Total Profit: <b> {{totalProfitInProfitChartWise}}</b> | </span>
-            <span>Avg Sale:  <b> {{averageSaleInProfitChartWise | number: '1.0-0'}}</b>, </span>
-            <span>Avg Profit:   <b> {{averageProfitInProfitChartWise | number: '1.0-0'}}</b> </span>
+             <span>Total Sale:<b> {{profitChartSummary.totalSale}}</b>, </span>
+            <span>Total Profit: <b> {{profitChartSummary.totalProfit}}</b> | </span>
+            <span>Avg Sale:  <b> {{profitChartSummary.averageSale | number: '1.0-0'}}</b>, </span>
+            <span>Avg Profit:   <b> {{profitChartSummary.averageProfit | number: '1.0-0'}}</b> </span>
         </div>
 
         <div>
@@ -251,12 +251,12 @@
         <!-- Select date range -->
         <mat-form-field class="field-width margin">
             <mat-label>Select date range</mat-label>
-            <mat-date-range-input [rangePicker]="picker">
+            <mat-date-range-input [rangePicker]="picker1">
                 <input matStartDate [(ngModel)]="fromDate" placeholder="Start date">
                 <input matEndDate [(ngModel)]="toDate" placeholder="End date">
             </mat-date-range-input>
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-date-range-picker #picker></mat-date-range-picker>
+            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+            <mat-date-range-picker #picker1></mat-date-range-picker>
         </mat-form-field>
         <!-- Categories start -->
         <mat-form-field class="field-width margin">
@@ -345,12 +345,12 @@
         <!-- Select date range -->
         <mat-form-field class="field-width margin">
             <mat-label>Select date range</mat-label>
-            <mat-date-range-input [rangePicker]="picker">
+            <mat-date-range-input [rangePicker]="picker2">
                 <input matStartDate [(ngModel)]="fromDate" placeholder="Start date">
                 <input matEndDate [(ngModel)]="toDate" placeholder="End date">
             </mat-date-range-input>
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-date-range-picker #picker></mat-date-range-picker>
+            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+            <mat-date-range-picker #picker2></mat-date-range-picker>
         </mat-form-field>
         <!-- Categories start -->
         <mat-form-field class="field-width margin">
